# swayped

./: LICENSE  meson.build
src/: command.c  command.h  gesture.c  gesture.h  main.c  swipe.c
